lab3/y.output
Nonterminals useless in grammar

   decs_nonempty
   decs_nonempty_s
   nonemptyactuals
   one
   oneormore
   rec_nonempty
   tyfields_nonempty


State 1 conflicts: 1 shift/reduce
State 29 conflicts: 1 shift/reduce
State 31 conflicts: 1 shift/reduce
State 33 conflicts: 1 reduce/reduce
State 72 conflicts: 12 shift/reduce
State 93 conflicts: 13 shift/reduce
State 94 conflicts: 12 shift/reduce
State 121 conflicts: 12 shift/reduce
State 122 conflicts: 12 shift/reduce
State 139 conflicts: 12 shift/reduce


Grammar

    0 $accept: program $end

    1 program: exp

    2 lvalue: ID
    3       | lvalue DOT ID
    4       | lvalue LBRACK exp RBRACK
    5       | ID LBRACK exp RBRACK

    6 exp: lvalue
    7    | LPAREN RPAREN
    8    | LPAREN sequencing RPAREN
    9    | NIL
   10    | INT
   11    | STRING
   12    | MINUS exp
   13    | ID LPAREN actuals RPAREN
   14    | exp PLUS exp
   15    | exp MINUS exp
   16    | exp TIMES exp
   17    | exp DIVIDE exp
   18    | exp EQ exp
   19    | exp NEQ exp
   20    | exp LT exp
   21    | exp LE exp
   22    | exp GT exp
   23    | exp GE exp
   24    | exp AND exp
   25    | exp OR exp
   26    | ID LBRACE rec RBRACE
   27    | ID LBRACK exp RBRACK OF exp
   28    | lvalue ASSIGN exp
   29    | IF exp THEN exp ELSE exp
   30    | IF exp THEN exp
   31    | WHILE exp DO exp
   32    | FOR ID ASSIGN exp TO exp DO exp
   33    | BREAK
   34    | LET decs IN expseq END
   35    | LPAREN exp RPAREN

   36 expseq: sequencing_exps

   37 sequencing: exp SEMICOLON sequencing
   38           | exp SEMICOLON exp

   39 sequencing_exps: exp SEMICOLON sequencing_exps
   40                | exp
   41                | %empty

   42 actuals: exp COMMA actuals
   43        | exp
   44        | %empty

   45 vardec: VAR ID ASSIGN exp
   46       | VAR ID COLON ID ASSIGN exp

   47 ty: ID
   48   | LBRACE tyfields RBRACE
   49   | ARRAY OF ID

   50 tyfield: ID COLON ID

   51 tyfields: tyfield COMMA tyfields
   52         | tyfield
   53         | %empty

   54 tydec_one: TYPE ID EQ ty

   55 tydec: tydec_one
   56      | tydec_one tydec

   57 fundec_one: FUNCTION ID LPAREN tyfields RPAREN EQ exp
   58           | FUNCTION ID LPAREN tyfields RPAREN COLON ID EQ exp

   59 fundec: fundec_one
   60       | fundec_one fundec

   61 dec: tydec
   62    | vardec
   63    | fundec

   64 decs: dec
   65     | dec decs
   66     | %empty

   67 rec_one: ID EQ exp

   68 rec: rec_one COMMA rec
   69    | rec_one
   70    | %empty


Terminals, with rules where they appear

$end (0) 0
error (256)
ID (258) 2 3 5 13 26 27 32 45 46 47 49 50 54 57 58 67
STRING (259) 11
INT (260) 10
COMMA (261) 42 51 68
COLON (262) 46 50 58
SEMICOLON (263) 37 38 39
LPAREN (264) 7 8 13 35 57 58
RPAREN (265) 7 8 13 35 57 58
LBRACK (266) 4 5 27
RBRACK (267) 4 5 27
LBRACE (268) 26 48
RBRACE (269) 26 48
DOT (270) 3
PLUS (271) 14
MINUS (272) 12 15
TIMES (273) 16
DIVIDE (274) 17
EQ (275) 18 54 57 58 67
NEQ (276) 19
LT (277) 20
LE (278) 21
GT (279) 22
GE (280) 23
AND (281) 24
OR (282) 25
ASSIGN (283) 28 32 45 46
ARRAY (284) 49
IF (285) 29 30
THEN (286) 29 30
ELSE (287) 29
WHILE (288) 31
FOR (289) 32
TO (290) 32
DO (291) 31 32
LET (292) 34
IN (293) 34
END (294) 34
OF (295) 27 49
BREAK (296) 33
NIL (297) 9
FUNCTION (298) 57 58
VAR (299) 45 46
TYPE (300) 54
UMINUS (301)


Nonterminals, with rules where they appear

$accept (47)
    on left: 0
program (48)
    on left: 1, on right: 0
lvalue (49)
    on left: 2 3 4 5, on right: 3 4 6 28
exp (50)
    on left: 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25
    26 27 28 29 30 31 32 33 34 35, on right: 1 4 5 12 14 15 16 17 18
    19 20 21 22 23 24 25 27 28 29 30 31 32 35 37 38 39 40 42 43 45
    46 57 58 67
expseq (51)
    on left: 36, on right: 34
sequencing (52)
    on left: 37 38, on right: 8 37
sequencing_exps (53)
    on left: 39 40 41, on right: 36 39
actuals (54)
    on left: 42 43 44, on right: 13 42
vardec (55)
    on left: 45 46, on right: 62
ty (56)
    on left: 47 48 49, on right: 54
tyfield (57)
    on left: 50, on right: 51 52
tyfields (58)
    on left: 51 52 53, on right: 48 51 57 58
tydec_one (59)
    on left: 54, on right: 55 56
tydec (60)
    on left: 55 56, on right: 56 61
fundec_one (61)
    on left: 57 58, on right: 59 60
fundec (62)
    on left: 59 60, on right: 60 63
dec (63)
    on left: 61 62 63, on right: 64 65
decs (64)
    on left: 64 65 66, on right: 34 65
rec_one (65)
    on left: 67, on right: 68 69
rec (66)
    on left: 68 69 70, on right: 26 68


State 0

    0 $accept: . program $end

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    program  go to state 12
    lvalue   go to state 13
    exp      go to state 14


State 1

    2 lvalue: ID .
    5       | ID . LBRACK exp RBRACK
   13 exp: ID . LPAREN actuals RPAREN
   26    | ID . LBRACE rec RBRACE
   27    | ID . LBRACK exp RBRACK OF exp

    LPAREN  shift, and go to state 15
    LBRACK  shift, and go to state 16
    LBRACE  shift, and go to state 17

    LBRACK    [reduce using rule 2 (lvalue)]
    $default  reduce using rule 2 (lvalue)


State 2

   11 exp: STRING .

    $default  reduce using rule 11 (exp)


State 3

   10 exp: INT .

    $default  reduce using rule 10 (exp)


State 4

    7 exp: LPAREN . RPAREN
    8    | LPAREN . sequencing RPAREN
   35    | LPAREN . exp RPAREN

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    RPAREN  shift, and go to state 18
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    lvalue      go to state 13
    exp         go to state 19
    sequencing  go to state 20


State 5

   12 exp: MINUS . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    lvalue  go to state 13
    exp     go to state 21


State 6

   29 exp: IF . exp THEN exp ELSE exp
   30    | IF . exp THEN exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    lvalue  go to state 13
    exp     go to state 22


State 7

   31 exp: WHILE . exp DO exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    lvalue  go to state 13
    exp     go to state 23


State 8

   32 exp: FOR . ID ASSIGN exp TO exp DO exp

    ID  shift, and go to state 24


State 9

   34 exp: LET . decs IN expseq END

    FUNCTION  shift, and go to state 25
    VAR       shift, and go to state 26
    TYPE      shift, and go to state 27

    $default  reduce using rule 66 (decs)

    vardec      go to state 28
    tydec_one   go to state 29
    tydec       go to state 30
    fundec_one  go to state 31
    fundec      go to state 32
    dec         go to state 33
    decs        go to state 34


State 10

   33 exp: BREAK .

    $default  reduce using rule 33 (exp)


State 11

    9 exp: NIL .

    $default  reduce using rule 9 (exp)


State 12

    0 $accept: program . $end

    $end  shift, and go to state 35


State 13

    3 lvalue: lvalue . DOT ID
    4       | lvalue . LBRACK exp RBRACK
    6 exp: lvalue .
   28    | lvalue . ASSIGN exp

    LBRACK  shift, and go to state 36
    DOT     shift, and go to state 37
    ASSIGN  shift, and go to state 38

    $default  reduce using rule 6 (exp)


State 14

    1 program: exp .
   14 exp: exp . PLUS exp
   15    | exp . MINUS exp
   16    | exp . TIMES exp
   17    | exp . DIVIDE exp
   18    | exp . EQ exp
   19    | exp . NEQ exp
   20    | exp . LT exp
   21    | exp . LE exp
   22    | exp . GT exp
   23    | exp . GE exp
   24    | exp . AND exp
   25    | exp . OR exp

    PLUS    shift, and go to state 39
    MINUS   shift, and go to state 40
    TIMES   shift, and go to state 41
    DIVIDE  shift, and go to state 42
    EQ      shift, and go to state 43
    NEQ     shift, and go to state 44
    LT      shift, and go to state 45
    LE      shift, and go to state 46
    GT      shift, and go to state 47
    GE      shift, and go to state 48
    AND     shift, and go to state 49
    OR      shift, and go to state 50

    $default  reduce using rule 1 (program)


State 15

   13 exp: ID LPAREN . actuals RPAREN

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    $default  reduce using rule 44 (actuals)

    lvalue   go to state 13
    exp      go to state 51
    actuals  go to state 52


State 16

    5 lvalue: ID LBRACK . exp RBRACK
   27 exp: ID LBRACK . exp RBRACK OF exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    lvalue  go to state 13
    exp     go to state 53


State 17

   26 exp: ID LBRACE . rec RBRACE

    ID  shift, and go to state 54

    $default  reduce using rule 70 (rec)

    rec_one  go to state 55
    rec      go to state 56


State 18

    7 exp: LPAREN RPAREN .

    $default  reduce using rule 7 (exp)


State 19

   14 exp: exp . PLUS exp
   15    | exp . MINUS exp
   16    | exp . TIMES exp
   17    | exp . DIVIDE exp
   18    | exp . EQ exp
   19    | exp . NEQ exp
   20    | exp . LT exp
   21    | exp . LE exp
   22    | exp . GT exp
   23    | exp . GE exp
   24    | exp . AND exp
   25    | exp . OR exp
   35    | LPAREN exp . RPAREN
   37 sequencing: exp . SEMICOLON sequencing
   38           | exp . SEMICOLON exp

    SEMICOLON  shift, and go to state 57
    RPAREN     shift, and go to state 58
    PLUS       shift, and go to state 39
    MINUS      shift, and go to state 40
    TIMES      shift, and go to state 41
    DIVIDE     shift, and go to state 42
    EQ         shift, and go to state 43
    NEQ        shift, and go to state 44
    LT         shift, and go to state 45
    LE         shift, and go to state 46
    GT         shift, and go to state 47
    GE         shift, and go to state 48
    AND        shift, and go to state 49
    OR         shift, and go to state 50


State 20

    8 exp: LPAREN sequencing . RPAREN

    RPAREN  shift, and go to state 59


State 21

   12 exp: MINUS exp .
   14    | exp . PLUS exp
   15    | exp . MINUS exp
   16    | exp . TIMES exp
   17    | exp . DIVIDE exp
   18    | exp . EQ exp
   19    | exp . NEQ exp
   20    | exp . LT exp
   21    | exp . LE exp
   22    | exp . GT exp
   23    | exp . GE exp
   24    | exp . AND exp
   25    | exp . OR exp

    $default  reduce using rule 12 (exp)


State 22

   14 exp: exp . PLUS exp
   15    | exp . MINUS exp
   16    | exp . TIMES exp
   17    | exp . DIVIDE exp
   18    | exp . EQ exp
   19    | exp . NEQ exp
   20    | exp . LT exp
   21    | exp . LE exp
   22    | exp . GT exp
   23    | exp . GE exp
   24    | exp . AND exp
   25    | exp . OR exp
   29    | IF exp . THEN exp ELSE exp
   30    | IF exp . THEN exp

    PLUS    shift, and go to state 39
    MINUS   shift, and go to state 40
    TIMES   shift, and go to state 41
    DIVIDE  shift, and go to state 42
    EQ      shift, and go to state 43
    NEQ     shift, and go to state 44
    LT      shift, and go to state 45
    LE      shift, and go to state 46
    GT      shift, and go to state 47
    GE      shift, and go to state 48
    AND     shift, and go to state 49
    OR      shift, and go to state 50
    THEN    shift, and go to state 60


State 23

   14 exp: exp . PLUS exp
   15    | exp . MINUS exp
   16    | exp . TIMES exp
   17    | exp . DIVIDE exp
   18    | exp . EQ exp
   19    | exp . NEQ exp
   20    | exp . LT exp
   21    | exp . LE exp
   22    | exp . GT exp
   23    | exp . GE exp
   24    | exp . AND exp
   25    | exp . OR exp
   31    | WHILE exp . DO exp

    PLUS    shift, and go to state 39
    MINUS   shift, and go to state 40
    TIMES   shift, and go to state 41
    DIVIDE  shift, and go to state 42
    EQ      shift, and go to state 43
    NEQ     shift, and go to state 44
    LT      shift, and go to state 45
    LE      shift, and go to state 46
    GT      shift, and go to state 47
    GE      shift, and go to state 48
    AND     shift, and go to state 49
    OR      shift, and go to state 50
    DO      shift, and go to state 61


State 24

   32 exp: FOR ID . ASSIGN exp TO exp DO exp

    ASSIGN  shift, and go to state 62


State 25

   57 fundec_one: FUNCTION . ID LPAREN tyfields RPAREN EQ exp
   58           | FUNCTION . ID LPAREN tyfields RPAREN COLON ID EQ exp

    ID  shift, and go to state 63


State 26

   45 vardec: VAR . ID ASSIGN exp
   46       | VAR . ID COLON ID ASSIGN exp

    ID  shift, and go to state 64


State 27

   54 tydec_one: TYPE . ID EQ ty

    ID  shift, and go to state 65


State 28

   62 dec: vardec .

    $default  reduce using rule 62 (dec)


State 29

   55 tydec: tydec_one .
   56      | tydec_one . tydec

    TYPE  shift, and go to state 27

    TYPE      [reduce using rule 55 (tydec)]
    $default  reduce using rule 55 (tydec)

    tydec_one  go to state 29
    tydec      go to state 66


State 30

   61 dec: tydec .

    $default  reduce using rule 61 (dec)


State 31

   59 fundec: fundec_one .
   60       | fundec_one . fundec

    FUNCTION  shift, and go to state 25

    FUNCTION  [reduce using rule 59 (fundec)]
    $default  reduce using rule 59 (fundec)

    fundec_one  go to state 31
    fundec      go to state 67


State 32

   63 dec: fundec .

    $default  reduce using rule 63 (dec)


State 33

   64 decs: dec .
   65     | dec . decs

    FUNCTION  shift, and go to state 25
    VAR       shift, and go to state 26
    TYPE      shift, and go to state 27

    IN        reduce using rule 64 (decs)
    IN        [reduce using rule 66 (decs)]
    $default  reduce using rule 64 (decs)

    vardec      go to state 28
    tydec_one   go to state 29
    tydec       go to state 30
    fundec_one  go to state 31
    fundec      go to state 32
    dec         go to state 33
    decs        go to state 68


State 34

   34 exp: LET decs . IN expseq END

    IN  shift, and go to state 69


State 35

    0 $accept: program $end .

    $default  accept


State 36

    4 lvalue: lvalue LBRACK . exp RBRACK

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    lvalue  go to state 13
    exp     go to state 70


State 37

    3 lvalue: lvalue DOT . ID

    ID  shift, and go to state 71


State 38

   28 exp: lvalue ASSIGN . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    lvalue  go to state 13
    exp     go to state 72


State 39

   14 exp: exp PLUS . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    lvalue  go to state 13
    exp     go to state 73


State 40

   15 exp: exp MINUS . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    lvalue  go to state 13
    exp     go to state 74


State 41

   16 exp: exp TIMES . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    lvalue  go to state 13
    exp     go to state 75


State 42

   17 exp: exp DIVIDE . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    lvalue  go to state 13
    exp     go to state 76


State 43

   18 exp: exp EQ . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    lvalue  go to state 13
    exp     go to state 77


State 44

   19 exp: exp NEQ . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    lvalue  go to state 13
    exp     go to state 78


State 45

   20 exp: exp LT . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    lvalue  go to state 13
    exp     go to state 79


State 46

   21 exp: exp LE . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    lvalue  go to state 13
    exp     go to state 80


State 47

   22 exp: exp GT . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    lvalue  go to state 13
    exp     go to state 81


State 48

   23 exp: exp GE . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    lvalue  go to state 13
    exp     go to state 82


State 49

   24 exp: exp AND . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    lvalue  go to state 13
    exp     go to state 83


State 50

   25 exp: exp OR . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    lvalue  go to state 13
    exp     go to state 84


State 51

   14 exp: exp . PLUS exp
   15    | exp . MINUS exp
   16    | exp . TIMES exp
   17    | exp . DIVIDE exp
   18    | exp . EQ exp
   19    | exp . NEQ exp
   20    | exp . LT exp
   21    | exp . LE exp
   22    | exp . GT exp
   23    | exp . GE exp
   24    | exp . AND exp
   25    | exp . OR exp
   42 actuals: exp . COMMA actuals
   43        | exp .

    COMMA   shift, and go to state 85
    PLUS    shift, and go to state 39
    MINUS   shift, and go to state 40
    TIMES   shift, and go to state 41
    DIVIDE  shift, and go to state 42
    EQ      shift, and go to state 43
    NEQ     shift, and go to state 44
    LT      shift, and go to state 45
    LE      shift, and go to state 46
    GT      shift, and go to state 47
    GE      shift, and go to state 48
    AND     shift, and go to state 49
    OR      shift, and go to state 50

    $default  reduce using rule 43 (actuals)


State 52

   13 exp: ID LPAREN actuals . RPAREN

    RPAREN  shift, and go to state 86


State 53
